[package]
name = "cotton2k"
version = "5.0.0"
authors = ["Tang Ziya <tcztzy@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
serde = "1"
serde_json = "1"

[build-dependencies]
bindgen = "0.56"

[lib]
crate-type = ["staticlib"]
