[project]
name = "cotton2k"
version = "4.0.0a1"
description = "Reimplementation for Cotton2k simulation model"
authors = [{ name = "Tang Ziya", email = "<tcztzy@gmail.com>" }]
license = "AGPL-3.0-or-later"
readme = "README.rst"
requires-python = ">=3.9"
keywords = ["cotton", "simulation", "model"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.urls]
homepage = "https://github.com/tcztzy/cotton2k"
repository = "https://github.com/tcztzy/cotton2k"

[build-system]
requires = ["setuptools", "wheel", "toml", "scikit-build", "cmake", "ninja", "Cython"]

[tool.isort]
profile = "black"

[tool.pylint.'MESSAGES CONTROL']
disable = [
    "invalid-name",
    "missing-function-docstring",
    "missing-module-docstring",
    "missing-class-docstring",
    "unsubscriptable-object",
]

[tool.pylint.FORMAT]
max-line-length = 88

[tool.coverage.run]
branch = true
omit = ["**/cotton2k/__main__.py"]

[tool.coverage.report]
fail_under = 100
