[project]
name = "cotton2k"
version = "5.0.0a2"
description = "Reimplementation for Cotton2k simulation model"
authors = [{ name = "Tang Ziya", email = "<tcztzy@gmail.com>" }]
readme = "README.rst"
requires-python = ">=3.9"
keywords = ["cotton", "simulation", "model"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.urls]
homepage = "https://github.com/tcztzy/cotton2k"
repository = "https://github.com/tcztzy/cotton2k"

[build-system]
requires = ["setuptools", "wheel", "toml", "Cython"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"

[tool.pylint.'MESSAGES CONTROL']
disable = [
    "invalid-name",
    "missing-function-docstring",
    "missing-module-docstring",
    "missing-class-docstring",
    "unsubscriptable-object",
]

[tool.pylint.FORMAT]
max-line-length = 88

[tool.coverage.run]
branch = true

[tool.coverage.report]
fail_under = 90
