[package]
name = "cotton2k"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
bindgen = "0.59.1"
cc = { version = "1.0", features = ["parallel"] }

[dependencies]
chrono = "0.4"
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
pbr = "1.0"
