[package]
name = "cotton2k_python"
version = "5.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "cotton2k"
crate-type = ["cdylib"]

[dependencies]
cotton2k = { path = "../cotton2k/" }
toml = "0.5"

[dependencies.pyo3]
version = "0.16"
features = ["extension-module"]
