[package]
name = "cotton2k_python"
version = "5.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "cotton2k"
crate-type = ["cdylib"]

[dependencies]
cotton2k = { path = "../../" }
toml = "0.9"
serde_json = "1.0"
pyo3 = { version = "0.27", features = ["extension-module"] }
