[build-system]
requires = ["maturin>=1.9,<1.10"]
build-backend = "maturin"

[project]
name = "cotton2k"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
]
dynamic = [
    "authors",
    "description",
    "license",
    "readme",
    "version"
]
