# Author: Tang Ziya
# Date: 2022-02-21
ttutil = library('ttutil',
  sources: [
    'addinf.for',
    'addint.for',
    'addrea.for',
    'addref.for',
    'addstf.for',
    'addstr.for',
    'ambusy.for',
    'copfl2.for',
    'delfil.for',
    'dtardp.for',
    'dtdpar.for',
    'dtdpst.for',
    'dtleap.for',
    'dtnow.f90',
    'dtsys.for',
    'entcha.for',
    'entdch.for',
    'enthlp.for',
    'extens.for',
    'fatalerr.f90',
    'flexist.for',
    'flname.for',
    'fopengstandard.f90',
    'fopens.for',
    'getun.for',
    'getun2.for',
    'ifindc.f90',
    'ifindi.for',
    'istart.for',
    'lowerc.for',
    'messini.f90',
    'messinq.f90',
    'messwrt.for',
    'outcom.for',
    'outdat.f90',
    'rdacha.for',
    'rdador.for',
    'rdadou.for',
    'rdainr.for',
    'rdatim.for',
    'rddata.for',
    'rderr.for',
    'rderri.for',
    'rdfcha.for',
    'rdfdor.for',
    'rdfdou.for',
    'rdfinr.for',
    'rdftim.for',
    'rddtmp.for',
    'rdindx.for',
    'rdinit.for',
    'rdinqr.for',
    'rdlex.for',
    'rdscha.for',
    'rdsctb.for',
    'rdsdor.for',
    'rdsdou.for',
    'rdsinr.for',
    'rdslog.for',
    'rdstim.for',
    'rdtmp1.for',
    'rdtmp2.for',
    'recread.f90',
    'recreadi.f90',
    'recreadt.f90',
    'sfindg.for',
    'str_copy.for',
    'swpi4.for',
    'ttutil.f90',
    'ttutilprefs.f90',
    'upperc.f90',
    'warning.for',
  ]
)
